2013-04-03  Rafael Antognolli

        * Evas: Added evas_event_input_mouse_move() for internal use only.
        * Evas: Added evas_event_input_multi_move() for internal use only.

2013-04-29  ChunEon Park (Hermet)

        * Evas: Added evas_object_image_source_clip_set()/get().

2013-04-25  Tom Hacohen

        * Evas textblock: Fixed line size calculation when using multiple
	fonts.

2013-04-25  Jihoon Kim

        * Edje entry: remove duplicated ecore_imf_context_reset in adjusting the selection

2013-04-22  Mike Blumenkrantz

        * Evas: Fix recursive proxy image rendering to just render black

2013-04-22  WooHyun Jung

        * Edje: When selected word exists, selection is cleared and cursor
		remains on the current edje_entry by additional key input.

2013-04-20  Carsten Haitzler (The Rasterman)

        * Ecore-X: Fix selection parser to not use longs - wrong on
        64bit as the rest of ecore-x keeps types to their REAL sizes (ints),
        but xlib uses longs (change size - eg 64bit even though protocol-wise
        the data is DEFINEd as 32bit)

2013-04-19  Jihoon Kim (jihoon)

        * Edje: Remove code to call ecore_imf_context_reset in case of pressing ESC, Return key

2013-04-14  Carsten Haitzler (The Rasterman)

        * Evas: Fix evas gl_x11 to use default depth when visual
        matching so lower depth displays work

2013-04-15  ChunEon Park
        * Evas: If an object goes to be hidden without replacing the cur/prev
        state info, the object context can be corrupted at the next show time.
        Now it replaces the cur/prev in that rare case.

2013-04-15 Tom Hacohen
        * Evas textblock: Fixed a bug with deletion of ranges that end just
	before a visual format.

2013-04-14  Jiyoun Park

        * Evas: fix gif bug related with scale down decode.

2013-04-14  Jiyoun Park

        * Evas: fix gif decoding bug related with background color.

2013-04-14  ChunEon Park
