@@ -257,3 +257,4 @@ Fixes:
     * Ecore-X: Fix selection parser to not overrun buffer read by using longs on 64bit.
     * Evas: Fix recursive proxy image rendering to just render black
     * Evas textblock: Fixed line size calculation when using multiple fonts.
+    * Evas: Fix gif loader can't load image which has normal frames and error frames
